[package]
name = "automated-deployments-api"
version = "0.1.0"
edition = "2021"
authors = ["Kris Warner <kdwarn@protonmail.com>"]
repository = "https://github.com/dvrpc/automated-deployments-api"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = "1.1.6"
dotenvy = "0.15.7"
dropshot = "0.10.0"
hmac = "0.12.1"
http = "0.2.9"
lettre = { version = "0.11", features = ["sendmail-transport"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
slog = "2.8.2"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
